--- a/.github/workflows/callable-ci.yml
+++ b/.github/workflows/callable-ci.yml
@@ -12,8 +12,7 @@ jobs:
         with:
           python-version: "3.12"
       - run: pip install -e ".[dev]"
-      - run: shopt -s globstar && align-md-docs --check tests/fixtures/**/expected.md
-        shell: bash
+      - run: align-md-docs
 
   test:
     runs-on: ubuntu-latest
